# pisync

./: .gitignore  MANIFEST.in  Makefile  README.md  main.py  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt
.github/workflows/: publish.yml
assets/styles/: modern_theme.qss  styles.qss
docs/: CURRENT-STATE.md  DEPENDENCY_MANAGEMENT.md  DEVELOPMENT.md  DOCUMENTATION-UPDATE-SUMMARY.md  INDEX.md  PRODUCTION_STANDARDS.md  QUICKSTART_PRODUCTION.md  README.md  ROADMAP.md  START-HERE.md  TIMESTAMP-UPDATE-SUMMARY.md  architecture-overview.md  architecture.md  bug-fixes-summary.md  bugs.md  error-handling-improvements.md  file-classifier-removal-summary.md  ideas.md  import-cleanup-summary.md  import-organization-final.md  infrastructure-and-deployment.md  issues.md  phase-1-simplify-complete.md  phase-2-separate-concerns-complete.md  phase-3-ui-cleanup-complete.md  pi-explorer-enhancements.md  pyright-type-fixes-summary.md  race-condition-fix-summary.md  sftp-thread-safety-fix.md  ui-redesign-complete.md
docs-internal/: DISTRIBUTION.md  PRODUCTION_STANDARDS.md  QUICKSTART_PRODUCTION.md
scripts/: build.sh  build_exe.sh  setup_dev.sh
src/application/: __init__.py  auto_sync_controller.py  manual_transfer_controller.py  path_mapper.py  transfer_engine.py
src/components/: main_window.py  server_selection_dialog.py  settings_window.py  splash_screen.py
src/config/: settings.py
src/controllers/: main_window_controller.py  monitor_thread.py  transfer_controller.py  transfer_worker.py
src/domain/: __init__.py  models.py  protocols.py
src/infrastructure/: __init__.py
src/infrastructure/filesystem/: __init__.py  local.py  remote.py
src/models/: errors.py
src/repositories/: file_monitor_repository.py
src/services/: base_transfer_service.py  connection_manager_service.py  file_classifier_service.py  file_deletion_service.py  file_transfer_service.py  movie_service.py  tv_service.py
src/utils/: constants.py  helper.py  logging_signal.py
src/widgets/: file_explorer_widget.py
ui/components/: file_explorer_widget.py  main_window.py  settings_window.py
ui/controllers/: monitor_thread.py
