[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pisync"
version = "1.0.0"
description = "Automated media transfer to Raspberry Pi with real-time file synchronization"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Loc Le", email = "loc.tan.le@gmail.com"}]
maintainers = [{name = "Loc Le", email = "loc.tan.le@gmail.com"}]
keywords = ["raspberry-pi", "media", "sftp", "automation", "sync", "transfer"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia",
    "Topic :: System :: Filesystems",
    "Typing :: Typed",
]

dependencies = [
    "paramiko>=3.5.1",
    "pillow>=12.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.5.2",
    "pyside6>=6.10.0",
    "send2trash>=1.8.3",
    "watchdog>=5.0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pylint>=2.17.0",
    "isort>=5.12.0",
    "build>=1.0.0",
    "twine>=4.0.0",
]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-qt>=4.2.0",
]
build = [
    "pyinstaller>=6.0.0",
    "build>=1.0.0",
    "twine>=4.0.0",
]

[project.scripts]
pisync = "main:main"

[project.urls]
Homepage = "https://github.com/imlocle/pisync"
Repository = "https://github.com/imlocle/pisync.git"
Documentation = "https://github.com/imlocle/pisync/tree/main/docs"
"Documentation Index" = "https://github.com/imlocle/pisync/blob/main/docs/INDEX.md"
"Bug Reports" = "https://github.com/imlocle/pisync/issues"

[tool.setuptools]
packages = ["src"]
include-package-data = true

[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311", "py312", "py313"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
skip_gitignore = true
known_first_party = ["src"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_optional = true

[tool.pylint."MESSAGES CONTROL"]
disable = [
    "C0111",  # missing-docstring
    "C0103",  # invalid-name
    "R0913",  # too-many-arguments
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "--cov=src --cov-report=term-missing --cov-report=html"